Adjustments: changed measurements  px -> rem

--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,17 @@ font-family: 'Kanit', sans-serif; -- TOPICOS (Bold) tam 32
     --texto-topicos: 'Kanit', sans-serif;
     --texto-titulo: 'Frank Ruhl Libre', serif;
 
-    --tam-corrido: 20px;
-    --tam-topicos: 40px;
-    --tam-titulo: 80px;
+    --tam-corrido: 2rem;
+    --tam-topicos: 4rem;
+    --tam-titulo: 8rem;
     
 
-    --margem: 16.7%;
 }
 
 /*Configuração padrão-------------------------------------------*/
 html{
     scroll-behavior: smooth;
+    font-size: 62.5%;
 }
 
 * {
@@ -42,30 +42,32 @@ body {
     max-width: 100vw;
     margin: 0 auto;
     background-color: var(--cor-primaria);
+    font-size: 1.6rem;
 }
 
 /*Nav bar-------------------------------------------*/
 .nav-list {
-    padding: 20px 0 20px 0;
+    padding: 2rem 0 2rem 0;
     background-color: var(--cor-secundaria);
     list-style-type: none;
     display: flex;
     align-items: center;
     justify-content: end;
     font-family: var(--texto-corrido);
-    font-size: 20px;
+    font-size: var(--tam-corrido);
     width: 100%;
+    height: auto;
 }
 
 .nav-list > li {
     display: inline;
-    margin-right: 100px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-right: 10rem;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .nav-list li a {
-    padding: 10px;
+    padding: 1rem;
     display: inline-block;
     position: relative;
     color: var(--cor-texto);
@@ -76,10 +78,10 @@ body {
     position: absolute;
     content: "";
     background-color: var(--cor-action);
-    height: 3px;
+    height: 0.3rem;
     width: 0;
     left: 0;
-    bottom: -5px;
+    bottom: -0.5rem;
     transition: 0.3s ease;
 }
 
@@ -95,10 +97,10 @@ body {
 .hero-section{
     display: flex;
     width: 100%;
-    max-width: 1280px;
+    max-width: 128rem;
     align-items: center;
     margin: auto;
-    margin-top: 110px;
+    margin-top: 11rem;
     padding-left: 4%;
     padding-right: 4%;
     gap: 9%;
@@ -107,31 +109,31 @@ body {
 .hero-text{
     justify-content: center;
     align-items: center;
-    padding-right: 50px;
+    padding-right: 5rem;
     width: 100%;
 }
 
 .hero-text h1{
     font-family: var(--texto-titulo);
-    font-size: 80px;
+    font-size: var(--tam-titulo);
     color: var(--cor-texto);
-    padding-bottom: 40px;
+    padding-bottom: 4rem;
 }
 
 .hero-text p{
     font-family: var(--texto-corrido);
-    font-size: 32px;
+    font-size: 3.2rem;
     color: var(--cor-texto);
 }
 
 .hero-text button{
-    margin-top: 40px;
+    margin-top: 4rem;
     font-family: var(--texto-corrido);
-    font-size: 32px;
+    font-size: 3.2rem;
     color: var(--cor-texto);
-    padding: 20px 40px 20px 40px;
-    border: 3px solid var(--cor-action);
-    border-radius: 60px;
+    padding: 2rem 4rem 2rem 4rem;
+    border: 0.3rem solid var(--cor-action);
+    border-radius: 6rem;
     transition: 0.2s ease;
     cursor: pointer;
 }
@@ -157,9 +159,9 @@ body {
 .sobre{
     display: flex;
     flex-wrap: wrap;
-    margin-top: 150px;
+    margin-top: 15rem;
     background-color: var(--cor-secundaria);
-    min-height: 710px;
+    height: auto;
     align-items: center;
     -webkit-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
     -moz-box-shadow: 0px 10px 25px 0px rgba(189,189,189,1);
@@ -171,7 +173,7 @@ body {
     flex-wrap: wrap;
     margin: auto;
     width: 100%;
-    max-width: 1280px;
+    max-width: 128rem;
     padding-left: 4%;
     padding-right: 4%;
 }
@@ -187,8 +189,8 @@ body {
 .sobre-img{}
 
 .sobre-img img{
-    width: 400px;
-    height: 400px;
+    width: 40rem;
+    height: 40rem;
     border-radius: 50%;
     object-fit: cover;
     object-position: 50% 20%;
@@ -198,8 +200,9 @@ body {
     flex: 2;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 3rem;
     width: 100%;
+    height: auto;
 }
 
 .sobre-text h2{
@@ -208,7 +211,7 @@ body {
     font-family: var(--texto-topicos);
     font-size: var(--tam-topicos);
     color: var(--cor-action);
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 .sobre-text p{
@@ -221,23 +224,22 @@ body {
 .como-funciona{
     display: flex;
     align-items: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
     padding-left: 4%;
     padding-right: 4%;
     margin: auto;
     width: 100%;
-    max-width: 1280px;
+    max-width: 128rem;
     height: 100%;
-    
 }
 
 .cf-text{
     flex: 2;
-    margin-right: 20px;
+    margin-right: 2rem;
     width: 100%;
     height: 100%;
-    padding: 10px 20px 10px 20px;
+    padding: 1rem 2rem 1rem 2rem;
 }
 
 .cf-text h2{
@@ -245,7 +247,7 @@ body {
     font-family: var(--texto-topicos);
     color: var(--cor-action);
     font-size: var(--tam-topicos);
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 .cf-text p{
@@ -256,7 +258,7 @@ body {
 
 .cf-ilustracao{
     flex: 1;
-    margin-left: 20px;
+    margin-left: 2rem;
     max-width: 100%;
     max-height: 100%;
 }
@@ -269,11 +271,11 @@ body {
 /*Topicos trabalhados --------------------------------------*/
 .topicos-trabalhados{
     background-color: var(--cor-secundaria);
-    border-radius: 2px;
+    border-radius: 0.2rem;
     margin-left: 2%;
     margin-right: 2%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     padding-left: 4%;
     padding-right: 4%;
     max-width: 100vw;
@@ -296,9 +298,9 @@ body {
     color: var(--cor-texto);
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
-    padding-bottom: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-bottom: 2rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
     max-width: 100%;
 }
 
@@ -306,7 +308,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 1rem;
     padding: 0;
     list-style: none;
     text-transform: capitalize;
@@ -321,10 +323,10 @@ body {
     max-height: 100%;
     min-width: 20%;
     text-align: center;
-    padding: 10px;
-    margin: 5px;
+    padding: 1rem;
+    margin: 0.5rem;
     background-color: var(--cor-primaria);
-    border-radius: 2px;
+    border-radius: 0.2rem;
     -webkit-box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
     -moz-box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
     box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
@@ -332,17 +334,17 @@ body {
 }
 
 .topicos-trabalhados ul li:hover{
-    transform: translateY(-10px);
+    transform: translateY(-1rem);
     font-weight: bold;
 }
 
 /*Feedback ------------------------------------------------------------*/
 .feedback{
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 10rem;
+    padding-bottom: 5rem;
     padding-left: 4%;
     padding-right: 4%;
-    margin-bottom: 100px;
+    margin-bottom: 10rem;
 }
 
 .card-container{
@@ -351,7 +353,7 @@ body {
     justify-content: space-around;
     margin:auto;
     width: 100%;
-    max-width: 1280px;
+    max-width: 128rem;
 }
 
 .feedback h2{
@@ -360,14 +362,14 @@ body {
     color: var(--cor-action);
     font-family: var(--texto-topicos);
     font-size: var(--tam-topicos);
-    padding-bottom: 40px;
+    padding-bottom: 4rem;
 }
 
 .card{
     position: relative;
-    padding: 30px;
-    min-height: 400px;
-    max-height: 700px;
+    padding: 3rem;
+    min-height: 40rem;
+    max-height: 70rem;
 }
 
 .card span{
@@ -376,9 +378,9 @@ body {
     justify-content: center;
     border-radius: 50%;
     background-color: var(--cor-secundaria);
-    font-size: 150px;
-    width: 200px;
-    height: 200px;
+    font-size: 15rem;
+    width: 20rem;
+    height: 20rem;
     color: var(--cor-texto);
     overflow: hidden;
 }
@@ -387,8 +389,8 @@ body {
     display: flex;
     font-family: var(--texto-corrido);
     color: var(--cor-texto);
-    font-size: 23px;
-    padding-top: 10px;
+    font-size: 2.3rem;
+    padding-top: 1rem;
     text-transform: capitalize;
     justify-content: center;
 }
@@ -397,7 +399,7 @@ body {
     position: absolute;
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
-    padding-top: 10px;
+    padding-top: 1rem;
     justify-content: center;
     color: var(--cor-texto);
 }
@@ -406,8 +408,8 @@ body {
 .faq{
     background-color: var(--cor-secundaria);
     min-height: 100%;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
     padding-left: 4%;
     padding-right: 4%;
     width: 100%;
@@ -420,25 +422,25 @@ body {
     font-size: var(--tam-topicos);
     width: 100%;
     margin: auto;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    max-width: 1280px;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    max-width: 128rem;
 }
 
 .perguntas-container{
     list-style-type: none;
     margin: auto;
     width: 100%;
-    max-width: 1280px;
-    margin-bottom: 20px;
+    max-width: 128rem;
+    margin-bottom: 2rem;
 }
 
 .pergunta{
     background-color: var(--cor-primaria);
     min-height: 100%;
-    padding-bottom: 40px;
-    margin-bottom: 20px;
-    border-radius: 10px;
+    padding-bottom: 4rem;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
     -webkit-box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
     -moz-box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
     box-shadow: 0px 10px 3px 0px rgba(222,222,222,1);
@@ -448,28 +450,24 @@ body {
 .texto-pergunta{
     color: var(--cor-texto);
     font-family: var(--texto-corrido);
-    font-size: 23px;
+    font-size: 2.3rem;
     font-weight: bolder;
-    padding: 20px;
+    padding: 2rem;
 }
 
 .texto-resposta{
     color: var(--cor-texto);
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
-    padding: 0 60px 0 60px;
+    padding: 0 6rem 0 6rem;
     display: show;
 }
 
 /*Contato -----------------------------------------------------------------*/
 .contatos{
-    padding-top: 60px;
-    padding-bottom: 60px;
     height: 100%;
     width: 100%;
-
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 6rem 4rem 6rem 4rem;
 }
 
 .contatos h2{
@@ -478,28 +476,27 @@ body {
     font-size: var(--tam-topicos);
     text-align: center;
     text-transform: uppercase;
-    padding-bottom: 20px;
+    padding-bottom: 2rem;
 }
 
 .contatos > div > p{
     font-family: var(--texto-corrido);
     color: var(--cor-texto);
-    font-size: 26px;
+    font-size: 2.6rem;
     font-weight: bolder;
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 3rem;
 }
 
 .caixa-flutuante{
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
-    max-width: 1280px;
+    max-width: 128rem;
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    border-radius: 2rem;
     -webkit-box-shadow: 0px 14px 78px 0px rgba(181,181,181,1);
     -moz-box-shadow: 0px 14px 78px 0px rgba(181,181,181,1);
     box-shadow: 0px 14px 78px 0px rgba(181,181,181,1);
@@ -509,9 +506,9 @@ body {
     display: inline-block;
     flex: 3;
     background-color: #ffffff;
-    border-radius: 20px 0 0 20px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    border-radius: 2rem 0 0 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
     width: 100%;
 }
 
@@ -532,7 +529,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: start;
-    padding: 5px 40px 5px 40px;
+    padding: 0.5rem 4rem 0.5rem 4rem;
     max-width: 100%;
 }
 
@@ -540,19 +537,19 @@ body {
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
     color: var(--cor-texto);
-    padding-left: 10px;
+    padding-left: 1rem;
 }
 
 .icon{
-    padding: 8px;
+    padding: 0.8rem;
     background-color: var(--cor-action);
     border-radius: 50%;
 }
 
 .icon img{
     display: flex;
-    height: 36px;
-    width: 36px;
+    height: 3.6rem;
+    width: 3.6rem;
     object-fit: cover;
 }
 
@@ -564,15 +561,15 @@ body {
 .form-email{
     flex: 2;
     background-color: var(--cor-secundaria);
-    border-radius: 0 20px 20px 0;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    border-radius: 0 2rem 2rem 0;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
     max-width: 100%;
     min-width: 50%;
 }
 
 .form-email h3{
-    margin-top: 40px;
+    margin-top: 4rem;
     text-align: center;
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
@@ -580,8 +577,8 @@ body {
 
 .form-email form{
     display: block;
-    padding: 0 40px 0 40px;
-    margin: 20px 0 20px 0;
+    padding: 0 4rem 0 4rem;
+    margin: 2rem 0 2rem 0;
 }
 
 .form-email label{
@@ -592,11 +589,11 @@ body {
 .form-email input, textarea{
     font-family: var(--texto-corrido);
     width: 100%;
-    padding: 12px 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 8px;
-    margin-bottom: 20px;
+    padding: 1.2rem 2rem;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.4rem;
+    margin-top: 0.8rem;
+    margin-bottom: 2rem;
     resize: none;
 }
 
@@ -607,8 +604,8 @@ body {
     font-size: var(--tam-corrido);
     width: 100%;
     border-style: none;
-    padding: 8px 0 8px 0;
-    border-radius: 4px;
+    padding: 0.8rem 0 0.8rem 0;
+    border-radius: 0.4rem;
     cursor: pointer;
     transition: 0.3s ease;
 }
@@ -624,19 +621,18 @@ footer{
 }
 
 .footer-container{
-    padding-top: 60px;
-    padding-bottom: 60px;
     display: flex;
     flex-wrap: wrap;
-    margin-left: var(--margem);
-    margin-right: var(--margem);
-    min-height: 100%;
-    max-width: 100%;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    max-width: 128rem;
+    padding: 6rem 4rem 6rem 4rem;
 }
 
 .mapa{
     flex: 1;
-    padding: 10px 100px 10px 10px;
+    padding: 1rem 10rem 1rem 1rem;
     max-width: 100%;
 }
 
@@ -648,16 +644,16 @@ footer{
 }
 
 .mapa h4{
-    padding-bottom: 12px;
+    padding-bottom: 1.2rem;
 }
 
 .mapa li{
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 .links{
     flex: 1;
-    padding: 10px 100px 10px 10px;
+    padding: 1rem 10rem 1rem 1rem;
     max-width: 100%;
 }
 
@@ -669,15 +665,15 @@ footer{
 }
 
 .links h4{
-    padding-bottom: 12px;
+    padding-bottom: 1.2rem;
 }
 
 .links li{
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 .aviso{
-    padding: 10px;
+    padding: 1rem;
     flex: 3;
     max-width: 100%;
 }
@@ -691,22 +687,22 @@ footer{
 .creditos p{
     color: var(--cor-primaria);
     font-family: var(--texto-corrido);
-    font-size: 16px;
+    font-size: 1.6rem;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 .creditos a{
     color: var(--cor-primaria);
     font-family: var(--texto-corrido);
-    font-size: 16px;
+    font-size: 1.6rem;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 /*Configuração do navegador (Scrollbar e mouse selection) -----------------*/
 ::-webkit-scrollbar{
-    width: 15px;
+    width: 1.5rem;
 }
 ::-webkit-scrollbar-thumb{
     background-color: var(--cor-action);
@@ -717,5 +713,5 @@ footer{
 
 /*Classe de teste --------------------------------------*/
 .borda{
-    border: 1px solid red;
+    border: 0.1rem solid red;
 }
