--- a/css/style.css
+++ b/css/style.css
@@ -272,13 +272,13 @@ body {
 .topicos-trabalhados{
     background-color: var(--cor-secundaria);
     border-radius: 0.2rem;
-    margin-left: 2%;
-    margin-right: 2%;
     padding-top: 5rem;
     padding-bottom: 5rem;
     padding-left: 4%;
     padding-right: 4%;
-    max-width: 100vw;
+    margin: auto;
+    width: 95%;
+    max-width: 128rem;
     -webkit-box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
     -moz-box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
     box-shadow: 0px 5px 10px 3px rgba(194,194,194,1);
@@ -305,23 +305,23 @@ body {
 }
 
 .topicos-trabalhados ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(1rem, 1fr));
     gap: 1rem;
-    padding: 0;
+    padding: 1rem;
     list-style: none;
     text-transform: capitalize;
     color: var(--cor-texto);
     font-family: var(--texto-corrido);
     font-size: var(--tam-corrido);
     min-height: 100%;
+    width: 100%;
+    max-width: 128rem;
+    margin: auto;
 }
 
 .topicos-trabalhados li{
-    max-width: 30%;
-    max-height: 100%;
-    min-width: 20%;
+    width: 100%;
     text-align: center;
     padding: 1rem;
     margin: 0.5rem;
