Adjustment: changed action color

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ font-family: 'Kanit', sans-serif; -- TOPICOS (Bold) tam 32
 :root {
     --cor-primaria: #F6F1F1;
     --cor-secundaria: #D0E6F0;
-    --cor-action: #EFD593;
+    --cor-action: #FFD15C;
     --cor-texto: #07152f;
 
     --texto-corrido: 'Archivo', sans-serif;
